Deleted sample files and ignored in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
 *.gem
+*.rbc
+.bundle
+.config
+.yardoc
+Gemfile.lock
+InstalledFiles
+_yardoc
+doc/
+lib/bundler/man
+pkg
+rdoc
+spec/reports
+test/tmp
+test/version_tmp
+tmp
+.rvmrc
+test/dummy/.sass-cache
+test/dummy/stylesheets
+test/dummy/dist
